高一时期到此一游

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   
   <meta name="theme-color" content="#00BFFF">
-  <meta name="description" content="一个热爱编程的初中生">
+  <meta name="description" content="一个热爱编程的初中生（现高中生）">
   <meta name="author" content="王宇灿">
   <meta name="keywords" content="">
   <title>奇光灿烂</title>
@@ -161,7 +161,7 @@
       <div class="full-bg-img">
         <div class="mask flex-center" style="background-color: rgba(0, 0, 0, 0.3)">
           <div class="page-header text-center fade-in-up">
-            <span class="h2" id="subtitle" title="一个热爱编程的初中生">
+            <span class="h2" id="subtitle" title="一个热爱编程的初中生（现高中生）">
               
             </span>
 
